2016-09-05  Kirit Saelensminde  <kirit@felspar.com>
 * Added a UTF8 string view
 * Added a JSON parse overload for UTF8 buffers and added extra tests.

2016-08-27  Kirit Saelensminde  <kirit@felspar.com>
 * Add `json_embedded_parser` which doesn't allow whitespace around the JSON.
 * Add default constructors to the JSON parsers so they can be const constructed.

2016-08-04  Kirit Saelensminde  <kirit@felspar.com>
 Ensure that the lengths match before comparing the data in `crypto_compare`.

2016-07-29  Kirit Saelensminde  <kirit@felspar.com>
 * Added initial support for minting and checking JWT.
 * Extra information for the `not_implemented` constructor can now be anything coercible to JSON. Also remove the exception from the `fost/core` header.
 * Make public a `jcursor` constructor so we can copy part of another one.
 * `jcursor` parts can be compared for equaility with string literals.
 * The `not_implemented` exception can now be given JSON as its third argument.
 * Add in nliteral comparison overloads in a couple of places they were missing.

2016-07-11  Kirit Saelensminde  <kirit@felspar.com>
 Fix a long standing bug in the Base64 encoder where it would add bad data when the data length was exactly divisible by 3.

2016-06-10  Kirit Saelensminde  <kirit@felspar.com>
 * Add a `fostlib::json::unparse` that takes a `fostlib::string`.
 * Add a `fostlib::json::get` overload that can be given a default to substitute if the value doesn't exist.
 * Add a coercion for the `sprintf` used in JSON unparsing. This should make it safer on a variety of platforms.

2016-03-25  Kirit Saelensminde  <kirit@felspar.com>
 * Add the F5 threadintg library to the standard project includes.
 * Optimise the JSON unparse, especially for the case where we can unparse into a buffer.

2016-03-22  Kirit Saelensminde  <kirit@felspar.com>
 Added coercion for `std::vector` to JSON, which will give an array of the vector values coerced to JSON.
